--- a/ReactJS/public/index.html
+++ b/ReactJS/public/index.html
@@ -15,7 +15,7 @@
     
 
 
-    <title>React App</title>
+    <title>Hamro-Shopping-App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
